terraform/minikube/modules/mongodb/istio.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: "reactory-mongo-gateway"
  namespace: reactory
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 27017
      name: mongodb
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reactory-mongo-gateway
  namespace: reactory
spec:
  hosts:
  - "*"
  gateways:
  - reactory-mongo-gateway
  tcp:
  - match:
    - port: 27017
    route:
    - destination:
        host: reactory-mongo
        port:
          number: 27017
